nambah 1 detail motor

--- a/product.html
+++ b/product.html
@@ -10,6 +10,8 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    
     <script type="text/javascript" src="assets/script/product.js"></script>
 </head>
 <body>
@@ -20,7 +22,7 @@
             </div>
             <nav class="navigasi">
                 <ul>
-                    <a href="#">
+                    <a href="index.html">
                         <li>Home</li>
                     </a>
                     <a href="#">
@@ -72,7 +74,7 @@
     <main>
         <div class="content">
             <div class="product-wrap">
-                <a href="">
+                <a href="matic.html">
                     <section class="card matic animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/matic/4.png" alt="matic1">
@@ -88,7 +90,7 @@
                 <a href="">
                     <section class="card  matic animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
-                            <img src="./assets/image/matic/7.png" alt="matic1">
+                            <img src="./assets/image/matic/1.png" alt="matic1">
                         </div>
                         <div class="text">
                             <h3>TZk</h3>
@@ -101,7 +103,7 @@
                 <a href="">
                     <section class="card  matic animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
-                            <img src="./assets/image/matic/8.png" alt="matic1">
+                            <img src="./assets/image/matic/2.png" alt="matic1">
                         </div>
                         <div class="text">
                             <h3>TZk 4000</h3>
@@ -117,9 +119,9 @@
                             <img src="./assets/image/e-motor/3.jpeg" alt="matic1">
                         </div>
                         <div class="text">
-                            <h3>TZk 4000</h3>
+                            <h3>Vp M-12</h3>
                             <p>Harga mulai</p>
-                            <h3>Rp 33.599.999,00</h3>
+                            <h3>Rp 63.599.999,00</h3>
                             <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
@@ -130,9 +132,9 @@
                             <img src="./assets/image/e-motor/2.jpeg" alt="matic1">
                         </div>
                         <div class="text">
-                            <h3>TZk 4000</h3>
+                            <h3>Vp Mz</h3>
                             <p>Harga mulai</p>
-                            <h3>Rp 33.599.999,00</h3>
+                            <h3>Rp 60.599.999,00</h3>
                             <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
@@ -143,9 +145,9 @@
                             <img src="./assets/image/e-motor/1.jpeg" alt="matic1">
                         </div>
                         <div class="text">
-                            <h3>TZk 4000</h3>
+                            <h3>EzV</h3>
                             <p>Harga mulai</p>
-                            <h3>Rp 33.599.999,00</h3>
+                            <h3>Rp 65.599.999,00</h3>
                             <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
@@ -156,9 +158,9 @@
                             <img src="./assets/image/cub/1.jpeg" alt="matic1">
                         </div>
                         <div class="text">
-                            <h3>TZk 4000</h3>
+                            <h3>Cub VTR</h3>
                             <p>Harga mulai</p>
-                            <h3>Rp 33.599.999,00</h3>
+                            <h3>Rp 23.599.999,00</h3>
                             <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
@@ -169,9 +171,9 @@
                             <img src="./assets/image/cub/2.jpeg" alt="matic1">
                         </div>
                         <div class="text">
-                            <h3>TZk 4000</h3>
+                            <h3>Cub VZ</h3>
                             <p>Harga mulai</p>
-                            <h3>Rp 33.599.999,00</h3>
+                            <h3>Rp 20.599.999,00</h3>
                             <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
@@ -182,9 +184,9 @@
                             <img src="./assets/image/cub/3.jpeg" alt="matic1">
                         </div>
                         <div class="text">
-                            <h3>TZk 4000</h3>
+                            <h3>Cub V-12</h3>
                             <p>Harga mulai</p>
-                            <h3>Rp 33.599.999,00</h3>
+                            <h3>Rp 19.599.999,00</h3>
                             <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
@@ -195,9 +197,9 @@
                             <img src="./assets/image/sport/1.jpeg" alt="matic1">
                         </div>
                         <div class="text">
-                            <h3>TZk 4000</h3>
+                            <h3>Voltra X</h3>
                             <p>Harga mulai</p>
-                            <h3>Rp 33.599.999,00</h3>
+                            <h3>Rp 153.599.999,00</h3>
                             <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
@@ -208,9 +210,9 @@
                             <img src="./assets/image/sport/2.jpeg" alt="matic1">
                         </div>
                         <div class="text">
-                            <h3>TZk 4000</h3>
+                            <h3>Vector 300</h3>
                             <p>Harga mulai</p>
-                            <h3>Rp 33.599.999,00</h3>
+                            <h3>Rp 533.599.999,00</h3>
                             <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
@@ -223,7 +225,7 @@
                         <div class="text">
                             <h3>TZk 4000</h3>
                             <p>Harga mulai</p>
-                            <h3>Rp 33.599.999,00</h3>
+                            <h3>Rp 733.599.999,00</h3>
                             <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
@@ -231,6 +233,63 @@
             </div>
         </div>
     </main>
+    <div class="channel">
+        <p><span>FIND </span>OUR CHANNEL</p>
+        <div class="channel-icon">
+            <a href=""><i class="fa-brands fa-instagram fa-xl"></i></a>
+            <a href=""><i class="fa-brands fa-tiktok fa-xl"></i></a>
+            <a href=""><i class="fa-brands fa-youtube fa-xl"></i></a>
+            <a href=""><i class="fa-brands fa-facebook fa-xl"></i></a>
+        </div>
+    </div>
+        <!-- footer  -->
+        <footer>
+            <div class="footer">
+                <div class="left-footer">
+                    <div class="left-footer-title">
+                        <img src="./assets/image/logogogo-removebg-preview.png" alt="vair">
+                        <p>VAIR INDONESIA OFFICIAL</p>
+                    </div>
+                    <div class="left-footer-content">
+                        <ul>
+                            <a href=""><li>Corporate</li></a>
+                            <a href=""><li>Product</li></a>
+                            <a href=""><li>Press Release</li></a>
+                        </ul>
+                        <ul>
+                            <a href=""><li>Dealer</li></a>
+                            <a href=""><li>Promo</li></a>
+                        </ul>
+                    </div>
+                </div>
+                <div class="right-footer">
+                    <div class="contact-us" id="contacts">
+                        <h2>Contact Us</h2>
+                        <div class="contact">
+                            <a href="mailto:adminmarketing@vairofc.com" target="_blank">
+                                <i class="fa-solid fa-envelope"></i>
+                                <p>adminmarketing@vairofc.com</p>
+                            </a>
+                        </div>
+                        <div class="contact">
+                            <a href="tel:02711234567" target="_blank">
+                                <i class="fa-solid fa-phone"></i>
+                                <p>(0271) 1234567</p>
+                            </a>
+                        </div>
+                        <div class="contact">
+                            <a href="https://www.google.com/maps/place/FKIP+JPTK+UNS+Kampus+V/@-7.5589648,110.7719058,17.77z/data=!4m14!1m7!3m6!1s0x2e7a14450edd210d:0xa6ea1f9494841e84!2sFKIP+JPTK+UNS+Kampus+V!8m2!3d-7.5592143!4d110.7743924!16s%2Fg%2F11bvt2msgb!3m5!1s0x2e7a14450edd210d:0xa6ea1f9494841e84!8m2!3d-7.5592143!4d110.7743924!16s%2Fg%2F11bvt2msgb?entry=ttu" target="_blank">
+                                <i class="fa-sharp fa-solid fa-location-dot"></i>
+                                <p>Jl. Jend. Ahmad Yani 200A Pabelan, Kartasura, Skh 57100</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                &copy; 2023 VAIR Indonesia Official. All Rights Reserved.
+            </div>
+        </footer>
     <script src="assets/script/product.js"></script>
 </body>
 </html>
