--- a/aboutus.html
+++ b/aboutus.html
@@ -39,7 +39,7 @@
                     <a href="#">
                         <li>About Us</li>
                     </a>
-                    <a href="#">
+                    <a href="/dealer.html">
                         <li>Dealer</li>
                     </a>
                     <a href="#contacts">
@@ -149,7 +149,7 @@
                         <a href="/product.html"><li>Product</li></a>
                     </ul>
                     <ul>
-                        <a href=""><li>Dealer</li></a>
+                        <a href="/dealer.html"><li>Dealer</li></a>
                         <a href=""><li>Press Release</li></a>
                     </ul>
                 </div>
