--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
                 </div>
                 <div class="left-footer-content">
                     <ul>
-                        <a href=""><li>Corporate</li></a>
-                        <a href=""><li>Product</li></a>
+                        <a href="/aboutus.html"><li>Corporate</li></a>
+                        <a href="/product.html"><li>Product</li></a>
                     </ul>
                     <ul>
-                        <a href=""><li>Dealer</li></a>
+                        <a href="/dealer.html"><li>Dealer</li></a>
                         <a href=""><li>Press Release</li></a>
                     </ul>
                 </div>
