nambah responsif detail product

--- a/product.html
+++ b/product.html
@@ -74,7 +74,7 @@
     <main>
         <div class="content">
             <div class="product-wrap">
-                <a href="matic.html">
+                <a href="matic1.html">
                     <section class="card matic animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/matic/4.png" alt="matic1">
@@ -87,7 +87,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="">
+                <a href="matic2.html">
                     <section class="card  matic animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/matic/1.png" alt="matic1">
@@ -100,7 +100,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="">
+                <a href="matic3.html">
                     <section class="card  matic animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/matic/2.png" alt="matic1">
@@ -113,7 +113,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="">
+                <a href="e-motor1.html">
                     <section class="card  e-motor animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/e-motor/3.jpeg" alt="matic1">
@@ -126,7 +126,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="">
+                <a href="e-motor2.html">
                     <section class="card  e-motor animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/e-motor/2.jpeg" alt="matic1">
@@ -139,7 +139,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="">
+                <a href="e-motor3.html">
                     <section class="card  e-motor animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/e-motor/1.jpeg" alt="matic1">
@@ -152,7 +152,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="">
+                <a href="cub1.html">
                     <section class="card  cub animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/cub/1.jpeg" alt="matic1">
@@ -165,7 +165,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="">
+                <a href="cub2.html">
                     <section class="card  cub animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/cub/2.jpeg" alt="matic1">
@@ -178,7 +178,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="">
+                <a href="cub3.html">
                     <section class="card  cub animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/cub/3.jpeg" alt="matic1">
@@ -191,7 +191,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="">
+                <a href="sport1.html">
                     <section class="card sport animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/sport/1.jpeg" alt="matic1">
@@ -204,7 +204,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="">
+                <a href="sport2.html">
                     <section class="card sport animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/sport/2.jpeg" alt="matic1">
@@ -217,7 +217,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="">
+                <a href="sport3.html">
                     <section class="card sport animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/sport/3.jpeg" alt="matic1">
