--- a/matic1.html
+++ b/matic1.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/detail-motor.css">
+    <link rel="stylesheet" href="./assets/css/detail-motor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
 </head>
 <body>
     <header>
@@ -16,7 +15,7 @@
             </div>
             <nav class="navigasi" id="navigasi">
                 <ul>
-                    <a href="#">
+                    <a href="index.html">
                         <li>Home</li>
                     </a>
                     <a href="./product.html">
@@ -33,6 +32,28 @@
                     </a>
                 </ul>
             </nav>
+            <div class="mobile-menu">
+                <nav class="mobile-nav">
+                    <ul>
+                        <a href="#">
+                            <li>Home</li>
+                        </a>
+                        <a href="./product.html">
+                            <li>Product</li>
+                        </a>
+                        <a href="./aboutus.html">
+                            <li>About Us</li>
+                        </a>
+                        <a href="#">
+                            <li>Dealer</li>
+                        </a>
+                        <a href="#contacts">
+                            <li>Contacts</li>
+                        </a>
+                    </ul>
+                </nav>
+                <button class="hamburger" id="hamburger-btn">&#9776;</button>
+            </div>
         </div>
     </header>
     <main>
@@ -56,13 +77,13 @@
                     <div class="about__card">
                         <h3 class="about__card-title">2.500+</h3>
                         <p class="about__card-description">
-                            Supercharges places along popular routes
+                            Supercharging Journeys, Powering Adventures Ahead!
                         </p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
+    <script src="assets/js/detail-motor.js"></script>
 </body>
 </html>
