nambah semua detail product

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="./aboutus.html">
                         <li>About Us</li>
                     </a>
-                    <a href="/dealer.html">
+                    <a href="dealer.html">
                         <li>Dealer</li>
                     </a>
                     <a href="#contacts">
