--- a/cub1.html
+++ b/cub1.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/detail-motor.css">
+    <link rel="stylesheet" href="assets/css/detail-motor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
 </head>
 <body>
     <header>
@@ -15,7 +16,7 @@
             </div>
             <nav class="navigasi" id="navigasi">
                 <ul>
-                    <a href="index.html">
+                    <a href="#">
                         <li>Home</li>
                     </a>
                     <a href="./product.html">
@@ -72,8 +73,8 @@
                     <a href="" class="button">Buy Now</a>
                 </div>
                 <div class="about__group animate__animated animate__slideInLeft">
-                    <img src="assets/image/matic/4-removebg-preview.png" alt="" class="about__img">
-
+                    <img src="assets/image/cub/1-removebg-preview.png" alt="" class="about__img">
+ 
                     <div class="about__card">
                         <h3 class="about__card-title">2.500+</h3>
                         <p class="about__card-description">
