--- a/e-motor3.html
+++ b/e-motor3.html
@@ -25,7 +25,7 @@
                     <a href="./aboutus.html">
                         <li>About Us</li>
                     </a>
-                    <a href="#">
+                    <a href="dealer.html">
                         <li>Dealer</li>
                     </a>
                     <a href="#contacts">
@@ -45,7 +45,7 @@
                         <a href="./aboutus.html">
                             <li>About Us</li>
                         </a>
-                        <a href="#">
+                        <a href="dealer.html">
                             <li>Dealer</li>
                         </a>
                         <a href="#contacts">
