--- a/product.html
+++ b/product.html
@@ -28,14 +28,14 @@
                     <a href="#">
                         <li>Product</li>
                     </a>
-                    <a href="#">
+                    <a href="./aboutus.html">
                         <li>About Us</li>
                     </a>
-                    <a href="#">
+                    <a href="dealer.html">
                         <li>Dealer</li>
                     </a>
-                    <a href="#">
-                        <li>Contacs</li>
+                    <a href="#contacts">
+                        <li>Contacts</li>
                     </a>
                 </ul>
             </nav>
