tambah no telp dealer

--- a/dealer.html
+++ b/dealer.html
@@ -68,6 +68,10 @@
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Gatot Subroto No. 78, Bandung</p>
                         </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0432) 6473625</p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-dealer slide-in-on-scroll">
@@ -77,6 +81,10 @@
                         <div class="desc-address">
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Diponegoro No. 45, Surabaya</p>
+                        </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0732) 6473625</p>
                         </div>
                     </a>
                 </div>
@@ -88,6 +96,10 @@
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Sudirman No. 56, Yogyakarta</p>
                         </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0492) 6473625</p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-dealer slide-in-on-scroll">
@@ -97,6 +109,10 @@
                         <div class="desc-address">
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Hayam Wuruk No. 34, Semarang</p>
+                        </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0532) 6473625</p>
                         </div>
                     </a>
                 </div>
@@ -110,6 +126,10 @@
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Gatot Subroto No. 78, Pati</p>
                         </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0982) 6473625</p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-dealer slide-in-on-scroll">
@@ -119,6 +139,10 @@
                         <div class="desc-address">
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Diponegoro No. 45, Purwodadi</p>
+                        </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0292) 6473625</p>
                         </div>
                     </a>
                 </div>
@@ -130,6 +154,10 @@
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Sudirman No. 56, Rembang</p>
                         </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0772) 6473625</p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-dealer slide-in-on-scroll">
@@ -139,6 +167,10 @@
                         <div class="desc-address">
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Hayam Wuruk No. 34, Wonogiri</p>
+                        </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0512) 6473625</p>
                         </div>
                     </a>
                 </div>
@@ -152,6 +184,10 @@
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Gatot Subroto No. 78, Klaten</p>
                         </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(9832) 6473625</p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-dealer slide-in-on-scroll">
@@ -161,6 +197,10 @@
                         <div class="desc-address">
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Diponegoro No. 45, Ungaran</p>
+                        </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0963) 6473625</p>
                         </div>
                     </a>
                 </div>
@@ -172,6 +212,10 @@
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Sudirman No. 56, Bekasi</p>
                         </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0132) 6473625</p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-dealer slide-in-on-scroll">
@@ -181,6 +225,10 @@
                         <div class="desc-address">
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Hayam Wuruk No. 34, Karanganyar</p>
+                        </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0777) 6473625</p>
                         </div>
                     </a>
                 </div>
@@ -194,6 +242,10 @@
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Gatot Subroto No. 78, Demak</p>
                         </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0432) 6473625</p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-dealer slide-in-on-scroll">
@@ -203,6 +255,10 @@
                         <div class="desc-address">
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Diponegoro No. 45, Ponorogo</p>
+                        </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(5532) 6473625</p>
                         </div>
                     </a>
                 </div>
@@ -214,6 +270,10 @@
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Sudirman No. 56, Madura</p>
                         </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0782) 6473625</p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-dealer slide-in-on-scroll">
@@ -223,6 +283,10 @@
                         <div class="desc-address">
                             <i class="fa-solid fa-location-dot fa-l"></i>
                             <p>Jl. Hayam Wuruk No. 34, Kudus</p>
+                        </div>
+                        <div class="desc-address">
+                            <i class="fa-solid fa-phone fa-l"></i>
+                            <p>(0462) 6473625</p>
                         </div>
                     </a>
                 </div>
@@ -236,6 +300,10 @@
                          <i class="fa-solid fa-location-dot fa-l"></i>
                          <p>Jl. Gatot Subroto No. 78, Padang</p>
                      </div>
+                     <div class="desc-address">
+                        <i class="fa-solid fa-phone fa-l"></i>
+                        <p>(0932) 6473625</p>
+                    </div>
                  </a>
              </div>
              <div class="card-dealer slide-in-on-scroll">
@@ -246,6 +314,10 @@
                          <i class="fa-solid fa-location-dot fa-l"></i>
                          <p>Jl. Diponegoro No. 45, Bukittinggi</p>
                      </div>
+                     <div class="desc-address">
+                        <i class="fa-solid fa-phone fa-l"></i>
+                        <p>(0642) 6473625</p>
+                    </div>
                  </a>
              </div>
              <div class="card-dealer slide-in-on-scroll">
@@ -256,6 +328,10 @@
                          <i class="fa-solid fa-location-dot fa-l"></i>
                          <p>Jl. Sudirman No. 56, Cilandak</p>
                      </div>
+                     <div class="desc-address">
+                        <i class="fa-solid fa-phone fa-l"></i>
+                        <p>(0432) 6473625</p>
+                    </div>
                  </a>
              </div>
              <div class="card-dealer slide-in-on-scroll">
@@ -266,6 +342,10 @@
                          <i class="fa-solid fa-location-dot fa-l"></i>
                          <p>Jl. Hayam Wuruk No. 34, Medan</p>
                      </div>
+                     <div class="desc-address">
+                        <i class="fa-solid fa-phone fa-l"></i>
+                        <p>(0532) 6473625</p>
+                    </div>
                  </a>
              </div>
          </div>
