--- a/product.html
+++ b/product.html
@@ -11,8 +11,6 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    
-    <script type="text/javascript" src="assets/script/product.js"></script>
 </head>
 <body>
     <header>
@@ -21,6 +19,7 @@
                 <img src="./assets/image/logoooo.png" alt="logo vair" id="logo-vair">
             </div>
             <nav class="navigasi">
+                <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
                 <ul>
                     <a href="index.html">
                         <li>Home</li>
