--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     </ul>
                     <ul>
                         <a href="/dealer.html"><li>Dealer</li></a>
-                        <a href=""><li>Press Release</li></a>
+                        <a href="/news.html"><li>Press Release</li></a>
                     </ul>
                 </div>
                 <div class="instansi">
