--- a/dealer.html
+++ b/dealer.html
@@ -379,7 +379,7 @@
                     </ul>
                     <ul>
                         <a href="#"><li>Dealer</li></a>
-                        <a href=""><li>Press Release</li></a>
+                        <a href="/news.html"><li>Press Release</li></a>
                     </ul>
                 </div>
                 <div class="instansi">
